fixed the css layout issue

--- a/registration.html
+++ b/registration.html
@@ -10,10 +10,10 @@
     <title>Insomniacs</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../bootstrap/docs/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
+    <link href="css/signin.css" rel="stylesheet">
   </head>
 
   <body>
