--- a/profile.html
+++ b/profile.html
@@ -1,6 +1,18 @@
+<!DOCTYPE html>
+<html> 
+
+<!-- Bootstrap core CSS -->
+    <link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- css stylesheet --> 
+<link href="css/signin.css" rel="stylesheet"> 
+
+
 <div class="container" style="padding-top: 60px;">
+
   <h1 class="page-header">Edit Profile</h1>
   <div class="row">
+
     <!-- left column -->
     <div class="col-md-4 col-sm-6 col-xs-12">
       <div class="text-center">
@@ -9,25 +21,26 @@
         <input type="file" class="text-center center-block well well-sm">
       </div>
     </div>
+
     <!-- edit form column -->
     <div class="col-md-8 col-sm-6 col-xs-12 personal-info">
       <div class="alert alert-info alert-dismissable">
         <a class="panel-close close" data-dismiss="alert">×</a> 
         <i class="fa fa-coffee"></i>
-        This is an <strong>.alert</strong>. Use this to show important messages to the user.
+        *insert part* from your wishlist is 50% off!
       </div>
       <h3>Personal info</h3>
       <form class="form-horizontal" role="form">
         <div class="form-group">
           <label class="col-lg-3 control-label">First name:</label>
           <div class="col-lg-8">
-            <input class="form-control" value="Jane" type="text">
+            <input class="form-control" value="" type="text">
           </div>
         </div>
         <div class="form-group">
           <label class="col-lg-3 control-label">Last name:</label>
           <div class="col-lg-8">
-            <input class="form-control" value="Bishop" type="text">
+            <input class="form-control" value="" type="text">
           </div>
         </div>
         <div class="form-group">
@@ -39,7 +52,7 @@
         <div class="form-group">
           <label class="col-lg-3 control-label">Email:</label>
           <div class="col-lg-8">
-            <input class="form-control" value="janesemail@gmail.com" type="text">
+            <input class="form-control" value="PANDABURGERS@gmail.com" type="text">
           </div>
         </div>
         <div class="form-group">
@@ -62,19 +75,19 @@
         <div class="form-group">
           <label class="col-md-3 control-label">Username:</label>
           <div class="col-md-8">
-            <input class="form-control" value="janeuser" type="text">
+            <input class="form-control" value="" type="text">
           </div>
         </div>
         <div class="form-group">
           <label class="col-md-3 control-label">Password:</label>
           <div class="col-md-8">
-            <input class="form-control" value="11111122333" type="password">
+            <input class="form-control" value="" type="password">
           </div>
         </div>
         <div class="form-group">
           <label class="col-md-3 control-label">Confirm password:</label>
           <div class="col-md-8">
-            <input class="form-control" value="11111122333" type="password">
+            <input class="form-control" value="" type="password">
           </div>
         </div>
         <div class="form-group">
@@ -89,3 +102,5 @@
     </div>
   </div>
 </div>
+
+</html> 
