--- a/index.html
+++ b/index.html
@@ -160,8 +160,7 @@ $(document).ready(function(e){
         <div class="row">
             <div class="col-sm-4">
                 <h2>What We Do</h2>
-                <p>Look for any elecronic part you need!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et molestiae similique eligendi reiciendis sunt distinctio odit? Quia, neque, ipsa, adipisci quisquam ullam deserunt accusantium illo iste exercitationem nemo voluptates asperiores.</p>
+                <p>Looking for an upgrade? Want to build a computer? Use Electronics R Us to find and bookmark whatever you need at the best prices online!</p>
                 <p>
                     <a class="btn btn-default btn-lg" href="#">Call to Action &raquo;</a>
                 </p>
