product/forum page added

--- a/registration.html
+++ b/registration.html
@@ -20,7 +20,7 @@
 
     <div class="container">
 
-      <form class="form-signin" action="registration.php" method="post">
+      <form class="form-signin" action="BE/registration.php" method="post">
         <h2 class="form-signin-heading">Insomniacs</h2>
 
         <label for="username" class="sr-only">Username</label>
