navbar working and other fixes

--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html> 
 
 <!-- Bootstrap core CSS -->
-    <link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="../bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- css stylesheet --> 
 <link href="css/signin.css" rel="stylesheet"> 
@@ -29,6 +29,7 @@
         <i class="fa fa-coffee"></i>
         *insert part* from your wishlist is 50% off!
       </div>
+      
       <h3>Personal info</h3>
       <form class="form-horizontal" role="form">
         <div class="form-group">
@@ -102,5 +103,11 @@
     </div>
   </div>
 </div>
+
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
 
 </html> 
