stuff works???? maybe

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="login.html">login</a>
+          </li>
+           <li class="nav-item">
+            <a class="nav-link" href="registration.html">register</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="profile.html"> Your Profile</a>
@@ -50,8 +53,8 @@
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Filter</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <a class="dropdown-item" href="#">On Sale</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Good shit</a>
+              <a class="dropdown-item" href="#">Secret Stash</a>
             </div>
           </li>
         </ul>
