--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 
     <div class="container">
 
-      <form class="form-signin" action="BE/login.php" method="post">
+      <form class="form-signin" action="login.php" method="post">
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="username" class="sr-only">Username</label>
         <input type="text" id="username" name="username" class="form-control" placeholder="username" required autofocus>
